--- a/Addatone_STM32F446/Addatone_STM32F446.ioc
+++ b/Addatone_STM32F446/Addatone_STM32F446.ioc
@@ -1,34 +1,44 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
+I2S2.ErrorAudioFreq=-0.1 %
+I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
+I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq
+I2S2.Instance=SPI$Index
+I2S2.RealAudioFreq=7.992 KHz
+I2S2.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP0=I2S2
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IPNb=4
 Mcu.Name=STM32F446Z(C-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PG7
-Mcu.Pin11=PA8
-Mcu.Pin12=PA9
-Mcu.Pin13=PA10
-Mcu.Pin14=PA11
-Mcu.Pin15=PA12
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=PB7
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin10=PD8
+Mcu.Pin11=PD9
+Mcu.Pin12=PG6
+Mcu.Pin13=PG7
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PA14
+Mcu.Pin21=PB7
+Mcu.Pin22=VP_SYS_VS_Systick
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PB0
-Mcu.Pin6=PB14
-Mcu.Pin7=PD8
-Mcu.Pin8=PD9
-Mcu.Pin9=PG6
-Mcu.PinsNb=20
+Mcu.Pin5=PC1
+Mcu.Pin6=PB0
+Mcu.Pin7=PB10
+Mcu.Pin8=PB12
+Mcu.Pin9=PB14
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446ZETx
@@ -77,6 +87,10 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB10.Mode=Half_Duplex_Master
+PB10.Signal=I2S2_CK
+PB12.Mode=Half_Duplex_Master
+PB12.Signal=I2S2_WS
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
@@ -85,6 +99,8 @@ PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PC1.Mode=Half_Duplex_Master
+PC1.Signal=I2S2_SD
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USER_Btn [B1]
 PC13.Locked=true
@@ -148,61 +164,63 @@ ProjectManager.functionlistsort=
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
-RCC.AHBFreq_Value=144000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=36000000
-RCC.APB1TimFreq_Value=72000000
-RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=72000000
-RCC.APB2TimFreq_Value=144000000
+RCC.AHBFreq_Value=50000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=25000000
+RCC.APB1TimFreq_Value=50000000
+RCC.APB2Freq_Value=50000000
+RCC.APB2TimFreq_Value=50000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=144000000
+RCC.CortexFreq_Value=50000000
 RCC.EthernetFreq_Value=8000000
-RCC.FCLKCortexFreq_Value=144000000
-RCC.FMPI2C1Freq_Value=36000000
+RCC.FCLKCortexFreq_Value=50000000
+RCC.FMPI2C1Freq_Value=25000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=144000000
+RCC.HCLKFreq_Value=50000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
 RCC.I2C3Freq_Value=8000000
-RCC.I2S1Freq_Value=48000000
-RCC.I2S2Freq_Value=48000000
+RCC.I2S1Freq_Value=109714285.71428572
+RCC.I2S2Freq_Value=109714285.71428572
 RCC.I2SClocksFreq_Value=48000000
-RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2S1Freq_Value,I2S2Freq_Value,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PRESCALERUSB,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ,WatchDogFreq_Value
+RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2S1Freq_Value,I2S2Freq_Value,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLI2SM,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SR,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PRESCALERUSB,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ,WatchDogFreq_Value
 RCC.LCDTFTFreq_Value=6125000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.MCO2PinFreq_Value=144000000
+RCC.MCO2PinFreq_Value=50000000
 RCC.MCOFreq_Value=72000000
-RCC.PLLCLKFreq_Value=144000000
-RCC.PLLI2SPCLKFreq_Value=48000000
-RCC.PLLI2SQCLKFreq_Value=48000000
-RCC.PLLI2SRCLKFreq_Value=48000000
-RCC.PLLI2SoutputFreq_Value=48000000
+RCC.PLLCLKFreq_Value=50000000
+RCC.PLLI2SM=4
+RCC.PLLI2SN=384
+RCC.PLLI2SPCLKFreq_Value=384000000
+RCC.PLLI2SQCLKFreq_Value=384000000
+RCC.PLLI2SR=7
+RCC.PLLI2SRCLKFreq_Value=109714285.71428572
+RCC.PLLI2SoutputFreq_Value=384000000
 RCC.PLLM=4
 RCC.PLLMCOFreq_Value=72000000
 RCC.PLLMUL=RCC_PLL_MUL9
-RCC.PLLN=144
-RCC.PLLQCLKFreq_Value=144000000
-RCC.PLLRCLKFreq_Value=144000000
+RCC.PLLN=50
+RCC.PLLQCLKFreq_Value=50000000
+RCC.PLLRCLKFreq_Value=50000000
 RCC.PLLSAIPCLKFreq_Value=48000000
 RCC.PLLSAIQCLKFreq_Value=48000000
 RCC.PLLSAIoutputFreq_Value=48000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PRESCALERUSB=RCC_USBCLKSOURCE_PLL_DIV1_5
-RCC.PWRFreq_Value=144000000
+RCC.PWRFreq_Value=50000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAIAFreq_Value=48000000
 RCC.SAIBFreq_Value=48000000
 RCC.SAI_AClocksFreq_Value=6125000
 RCC.SAI_BClocksFreq_Value=6125000
-RCC.SDIOFreq_Value=144000000
-RCC.SPDIFRXFreq_Value=144000000
-RCC.SYSCLKFreq_VALUE=144000000
+RCC.SDIOFreq_Value=50000000
+RCC.SPDIFRXFreq_Value=50000000
+RCC.SYSCLKFreq_VALUE=50000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TIM15Freq_Value=72000000
@@ -218,12 +236,12 @@ RCC.UART5Freq_Value=36000000
 RCC.USART1Freq_Value=72000000
 RCC.USART2Freq_Value=36000000
 RCC.USART3Freq_Value=36000000
-RCC.USBFreq_Value=144000000
-RCC.VCOI2SInputFreq_Value=500000
-RCC.VCOI2SOutputFreq_Value=96000000
+RCC.USBFreq_Value=50000000
+RCC.VCOI2SInputFreq_Value=2000000
+RCC.VCOI2SOutputFreq_Value=768000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutput2Freq_Value=8000000
-RCC.VCOOutputFreq_Value=288000000
+RCC.VCOOutputFreq_Value=100000000
 RCC.VCOSAIInputFreq_Value=500000
 RCC.VCOSAIOutputFreq_Value=96000000
 RCC.VCOSAIOutputFreq_ValueQ=6125000
