--- a/Addatone_STM32F446/Addatone_STM32F446.ioc
+++ b/Addatone_STM32F446/Addatone_STM32F446.ioc
@@ -262,4 +262,4 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F446ZE
 boardIOC=true
-isbadioc=true
+isbadioc=false
